--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
   .main .header-1 span {
     color: blue; }
 .main .parahraph {
-  color: rebeccapurple; }
+  color: red; }
   .main .parahraph.is-big {
     font-size: 30px; }
 
