--- a/assets/style.scss
+++ b/assets/style.scss
@@ -8,7 +8,7 @@
         }
     }
     .parahraph {
-        color: rebeccapurple;
+        color: red;
         &.is-big {
             font-size: 30px;
         }
