Change color again

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@
 .main .header-1 {
   color: red; }
   .main .header-1 span {
-    color: blue; }
+    color: red; }
 .main .parahraph {
   color: red; }
   .main .parahraph.is-big {
