--- a/assets/style.scss
+++ b/assets/style.scss
@@ -4,7 +4,7 @@
     .header-1 { 
         color:red;
         span {
-            color: blue;
+            color: red;
         }
     }
     .parahraph {
